# smart-terminal

./: .env  .gitignore  .swp  Cargo.toml  README.md  notes.txt
.github/workflows/: ci.yml
scripts/: autocomplete.sh
scripts/zsh/: smart-terminal.zsh
src/: chat.rs  lib.rs  main.rs  utils.rs
src/agent/: client.rs  error.rs  input.rs  mod.rs  output.rs  pty.rs  render.rs  request.rs  responce.rs  service.rs  session.rs  terminal.rs
src/agent/agents/: contexts.rs  hooks.rs  mod.rs  prompts.rs
src/agent/archtectures/: hook.rs  mod.rs  oneshot.rs  react.rs
src/agent/cmd_line/: buffer.rs  cmd_line.rs  (+3 more)
src/chat/: chat.rs  mod.rs  next_cmd.rs  prompt.rs
src/cli/: adapters.rs  cli.rs  mod.rs
src/cmds/: cli.rs  mod.rs
src/context/: impl_string.rs  mod.rs  state.rs  traits.rs
src/contracts/: capability.rs  error.rs  session.rs
src/core/: capability.rs  error.rs  llm_client.rs  memory.rs  mod.rs  session.rs
src/emulator/: input.rs  mod.rs  output.rs  pty.rs  terminal.rs
src/groq/: adapters.rs  client.rs  error.rs  mod.rs
src/interfaces/: capability.rs  mod.rs  policy.rs  session.rs
src/protocol/: error.rs  message.rs  mod.rs  model_result.rs  request.rs  responce.rs  tool.rs
src/resolve/: mod.rs  resolve.rs  smartlogs.rs
src/tools/: ask_user.rs  bash.rs  docker.rs  error.rs  final_answer.rs  git_diff.rs  git_log.rs  git_status.rs  json.rs  list_process.rs  mod.rs  read_dir.rs  read_file.rs
tests/: e2e_groq_test.rs  grog_integration.rs  ingration.rs  mcp_integration.rs
tests/integration/: grog.rs  investigator.rs  next_cmd.rs  script_generator.rs
(+50 files in other folders)
