[package]
name = "smart-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8.0" 
crossterm = "0.27"
mockito = "0.31"
serde_json = "1.0"
dotenv = "0.15"
walkdir = "2.5.0"
indoc = "2.0.7"
schemars = "0.8"
hostname = "0.3"
libc = "0.2"
downcast-rs = "2.0.2"
thiserror = "2.0.18"
anyhow = "1.0.102"
jsonschema = "0.43.0"
