[package]
name = "smart-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
schemars = "0.8"
libc = "0.2"
thiserror = "2.0.18"
anyhow = "1.0.102"
jsonschema = "0.43.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.4"
clap = { version = "4", features = ["derive"] }
tempfile = "3.27.0"
